syntax = "proto3";

package shared;

import "google/protobuf/struct.proto";

option go_package = "github.com/tmrrwnxtsn/ecomway/api/proto/shared";

enum OperationType {
  PAYMENT = 0;
  PAYOUT = 1;
}

enum OperationExternalStatus {
  UNKNOWN = 0;
  PENDING = 1;
  SUCCESS = 2;
  FAILED = 3;
}

message Limits {
  int64 min_amount = 1;
  int64 max_amount = 2;
}

enum CommissionType {
  PERCENT = 0;
  FIXED = 1;
  COMBINED = 2;
  TEXT = 3;
}

message Commission {
  CommissionType type = 1;
  optional string currency = 2;
  optional double percent = 3;
  optional double absolute = 4;
  map<string, string> message = 5;
}

message Method {
  string id = 1;
  map<string, string> displayed_name = 2;
  string external_system = 3;
  string external_method = 4;
  map<string, Limits> limits = 5;
  Commission commission = 6;
}

message Error {
  string group = 1;
  string code = 2;
}

message ReturnURLs {
  string common = 1;
  optional string success = 2;
  optional string fail = 3;
}

enum ToolType {
  BANK_CARD = 0;
  WALLET = 1;
}

enum ToolStatus {
  ACTIVE = 0;
}

message Tool {
  string id = 1;
  int64 user_id = 2;
  string external_method = 3;
  optional ToolType type = 4;
  optional google.protobuf.Struct details = 5;
  string displayed = 6;
  string name = 7;
  ToolStatus status = 8;
  bool fake = 9;
  int64 created_at = 10;
  int64 updated_at = 11;
}
